editor overflow fix

--- a/assets/new_layout/css/style.css
+++ b/assets/new_layout/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 html {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 a {
